force-app/main/default/objects/order_line_item__c/fields/ordep_Defer_Credit_Dep_Date__c.field-meta.xml
<CustomField>
    <fullName>ordep_Defer_Credit_Dep_Date__c</fullName>
    <label>Defer Credit Dep Date</label>
    <type>Date</type>
</CustomField>