force-app/main/default/objects/order_line_item__c/fields/Order_Line_Records_Exist__c.field-meta.xml
<CustomField>
    <fullName>Order_Line_Records_Exist__c</fullName>
    <label>Order Line Records Exist</label>
    <summaryFilterItems>
        <field>order_line_POE__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Cancelled</value>
    </summaryFilterItems>
    <summaryForeignKey>order_line_POE__c.Order_Line_Item__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>