force-app/main/default/objects/order_line_item__c/fields/OrderFFStatus__c.field-meta.xml
<CustomField>
    <fullName>OrderFFStatus__c</fullName>
    <label>OrderFFStatus</label>
    <length>50</length>
    <type>Text</type>
</CustomField>