force-app/main/default/objects/order_line_item__c/fields/OrderFFStatus_Formula__c.field-meta.xml
<CustomField>
    <fullName>OrderFFStatus_Formula__c</fullName>
    <formula>TEXT(ordexp_TAD_Order__r.FFStatus__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OrderFFStatus_Formula</label>
    <type>Text</type>
</CustomField>