force-app/main/default/objects/order_line_item__c/fields/orders__c.field-meta.xml
<CustomField>
    <fullName>orders__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>orders</label>
    <referenceTo>order__c</referenceTo>
    <relationshipLabel>Order Line Items</relationshipLabel>
    <relationshipName>Order_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>