force-app/main/default/objects/order_line_item__c/fields/orderxp_addons_amount__c.field-meta.xml
<CustomField>
    <fullName>orderxp_addons_amount__c</fullName>
    <label>AddOns Amount</label>
    <summarizedField>AddOn__c.ordexp_amount__c</summarizedField>
    <summaryForeignKey>AddOn__c.Order_Line_Item__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>