force-app/main/default/objects/order_line_item__c/fields/orderxp_total_amount__c.field-meta.xml
<CustomField>
    <fullName>orderxp_total_amount__c</fullName>
    <formula>orderxp_addons_amount__c + ordexp_suboption_amount__c + ordexp_total_customisations_amount__c +
ordexp_city_surcharge_amount__c +ordexp_total_insurance_amount__c + ordexp_total_visa_amount__c +  Total_surcharge__c+on_hss_amount__c - ordexp_oli_CanAmount__c +  sm_Hotel_Price__c + Cruise_Upgrade__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>