force-app/main/default/objects/order_line_item__c/fields/ordexp_city_surcharge_amount__c.field-meta.xml
<CustomField>
    <fullName>ordexp_city_surcharge_amount__c</fullName>
    <formula>IF(ordexp_orderRT__c=&apos;TAD&apos; || ordexp_orderRT__c=&apos;TC&apos;,  Departure_cities__r.Surcharge__c,  IF(ordexp_orderRT__c=&apos;TNZ&apos; || ordexp_orderRT__c=&apos;WT&apos;, Departure_cities__r.surcharge_nz__c , 0) ) * PAX_Qty__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>City Surcharge Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>