force-app/main/default/objects/order_line_item__c/fields/ordexp_city_surcharge_amount_per_pax__c.field-meta.xml
<CustomField>
    <fullName>ordexp_city_surcharge_amount_per_pax__c</fullName>
    <label>City Surcharge Amount Per Pax</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>