force-app/main/default/objects/order_line_item__c/fields/ordexp_city_surcharge_amount_per_pax_c__c.field-meta.xml
<CustomField>
    <fullName>ordexp_city_surcharge_amount_per_pax_c__c</fullName>
    <label>ordexp_city_surcharge_amount_per_pax__c</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>