force-app/main/default/objects/order_line_item__c/fields/ordexp_Comms_Email__c.field-meta.xml
<CustomField>
    <fullName>ordexp_Comms_Email__c</fullName>
    <label>Comms Email</label>
    <type>Email</type>
</CustomField>