force-app/main/default/objects/order_line_item__c/fields/ordexp_Coupon_aggregate_used__c.field-meta.xml
<CustomField>
    <fullName>ordexp_Coupon_aggregate_used__c</fullName>
    <label>Coupon aggregate used</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>