force-app/main/default/objects/order_line_item__c/fields/ordexp_Coupon_Restrictions__c.field-meta.xml
<CustomField>
    <fullName>ordexp_Coupon_Restrictions__c</fullName>
    <label>Coupon Restrictions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>