force-app/main/default/objects/order_line_item__c/fields/ordexp_CouponCreated__c.field-meta.xml
<CustomField>
    <fullName>ordexp_CouponCreated__c</fullName>
    <label>CouponCreated</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>