force-app/main/default/objects/order_line_item__c/fields/ordexp_COVID_Comms__c.field-meta.xml
<CustomField>
    <fullName>ordexp_COVID_Comms__c</fullName>
    <label>COVID Comms</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>