force-app/main/default/objects/order_line_item__c/fields/ordexp_Customisation_Credit__c.field-meta.xml
<CustomField>
    <fullName>ordexp_Customisation_Credit__c</fullName>
    <label>Customisation Credit</label>
    <summarizedField>Order_Customisations_POE__c.Cancellation_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Order_Customisations_POE__c.Refund_Status__c</field>
        <operation>equals</operation>
        <value>Full Credit, Partial Credit</value>
    </summaryFilterItems>
    <summaryForeignKey>Order_Customisations_POE__c.Order_Line_Item__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>