force-app/main/default/objects/order_line_item__c/fields/ordexp_CVC__c.field-meta.xml
<CustomField>
    <fullName>ordexp_CVC__c</fullName>
    <label>CVC</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Issued</fullName>
            </value>
            <value>
                <fullName>Proceed</fullName>
            </value>
            <value>
                <fullName>Cancel &amp; Credit</fullName>
            </value>
            <value>
                <fullName>Declined (Insurance)</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Return Home</fullName>
            </value>
            <value>
                <fullName>Stay on Tour</fullName>
            </value>
            <value>
                <fullName>POM</fullName>
            </value>
            <value>
                <fullName>Forced Credit</fullName>
            </value>
            <value>
                <fullName>1939PaymentReceivedReissue</fullName>
            </value>
            <value>
                <fullName>1721 NZ Remain in France 1721</fullName>
            </value>
            <value>
                <fullName>NZ New Flight</fullName>
            </value>
            <value>
                <fullName>1721 NZ Own Flight</fullName>
            </value>
            <value>
                <fullName>Voucher</fullName>
            </value>
            <value>
                <fullName>TADActionRequired</fullName>
            </value>
            <value>
                <fullName>TADRevisedOffer</fullName>
            </value>
            <value>
                <fullName>DateChange</fullName>
            </value>
            <value>
                <fullName>BERefund</fullName>
            </value>
            <value>
                <fullName>Unaffected</fullName>
            </value>
            <value>
                <fullName>TADDefer</fullName>
            </value>
            <value>
                <fullName>Open Credit</fullName>
            </value>
            <value>
                <fullName>Goodwill</fullName>
            </value>
            <value>
                <fullName>3111Opt1</fullName>
            </value>
            <value>
                <fullName>3111Opt2</fullName>
            </value>
            <value>
                <fullName>ExclCredit</fullName>
            </value>
            <value>
                <fullName>CancelManualCredit</fullName>
            </value>
            <value>
                <fullName>Open Credit(Revised)</fullName>
            </value>
            <value>
                <fullName>TADCredit</fullName>
            </value>
            <value>
                <fullName>TADRefund</fullName>
            </value>
            <value>
                <fullName>NYCE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>