force-app/main/default/objects/order_line_item__c/fields/ordexp_CVC_Coupon_Name__c.field-meta.xml
<CustomField>
    <fullName>ordexp_CVC_Coupon_Name__c</fullName>
    <formula>MID( Id ,10,6) +  ordexp_TAD_Order__r.ordexp_account__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CVC Coupon Name</label>
    <type>Text</type>
</CustomField>