force-app/main/default/objects/order_line_item__c/fields/ordexp_Defer_Credit_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>ordexp_Defer_Credit_Expiry_Date__c</fullName>
    <label>Defer Credit Expiry Date</label>
    <type>Date</type>
</CustomField>