force-app/main/default/objects/order_line_item__c/fields/ordexp_Defer_Fee__c.field-meta.xml
<CustomField>
    <fullName>ordexp_Defer_Fee__c</fullName>
    <label>Defer Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>