force-app/main/default/objects/order_line_item__c/fields/ordexp_departure_date__c.field-meta.xml
<CustomField>
    <fullName>ordexp_departure_date__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Note :- For Stay type Orders, change to Departure Date will be applied to all the OLIs of this Order</inlineHelpText>
    <label>Departure date</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>departures_dates__c.sub_options__c</field>
            <operation>equals</operation>
            <valueField>$Source.Sub_Options__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>departures_dates__c</referenceTo>
    <relationshipLabel>Order Line Items</relationshipLabel>
    <relationshipName>Order_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>