force-app/main/default/objects/order_line_item__c/fields/ordexp_Forced_Credit_Amount__c.field-meta.xml
<CustomField>
    <fullName>ordexp_Forced_Credit_Amount__c</fullName>
    <label>Forced Credit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>