force-app/main/default/objects/order_line_item__c/fields/ordexp_oli_CanAmount__c.field-meta.xml
<CustomField>
    <fullName>ordexp_oli_CanAmount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Cancellation Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>