force-app/main/default/objects/order_line_item__c/fields/ordexp_oli_name__c.field-meta.xml
<CustomField>
    <fullName>ordexp_oli_name__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;&amp;Id, Name +&apos;--&apos;+TEXT(Departure_cities__r.city__c)+&apos;--&apos;+TEXT(PAX_Qty__c)+&apos;--&apos;+Sub_Options__r.Name, &quot;_self&quot;)</formula>
    <label>Order Line Item Name</label>
    <type>Text</type>
</CustomField>