force-app/main/default/objects/order_line_item__c/fields/ordexp_Options__c.field-meta.xml
<CustomField>
    <fullName>ordexp_Options__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Options</label>
    <referenceTo>options__c</referenceTo>
    <relationshipLabel>Order Line Items</relationshipLabel>
    <relationshipName>Order_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>