force-app/main/default/objects/order_line_item__c/fields/ordexp_orderRT__c.field-meta.xml
<CustomField>
    <fullName>ordexp_orderRT__c</fullName>
    <formula>ordexp_TAD_Order__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OrderRT</label>
    <type>Text</type>
</CustomField>