force-app/main/default/objects/order_line_item__c/fields/ordexp_POM_Credit_Amount__c.field-meta.xml
<CustomField>
    <fullName>ordexp_POM_Credit_Amount__c</fullName>
    <formula>ordexp_Total_OLI_Net_Amount__c -  IF(OR( Deal__r.Name =&apos;1512&apos;, Deal__r.Name =&apos;3070&apos;, Deal__r.Name =&apos;3065&apos;, Deal__r.Name =&apos;3078&apos;,Deal__r.Name =&apos;1884&apos;, Deal__r.Name =&apos;1893&apos;, Deal__r.Name =&apos;3304&apos;), 299, IF(Deal__r.Name =&apos;1735&apos;,399, IF( OR(Deal__r.Name =&apos;3368&apos;, Deal__r.Name =&apos;3108&apos;, Deal__r.Name =&apos;3133&apos; ), 199,499) )) * PAX_Qty__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>POM Credit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>