force-app/main/default/objects/order_line_item__c/fields/ordexp_POM_credit_Deal_Amount__c.field-meta.xml
<CustomField>
    <fullName>ordexp_POM_credit_Deal_Amount__c</fullName>
    <formula>IF( OR(Deal__r.Deal_ID_Title__c = &apos;1512&apos;,Deal__r.Deal_ID_Title__c = &apos;3070&apos;, Deal__r.Deal_ID_Title__c = &apos;3065&apos;, Deal__r.Deal_ID_Title__c = &apos;3078&apos;, Deal__r.Deal_ID_Title__c = &apos;1884&apos;, Deal__r.Deal_ID_Title__c = &apos;1893&apos;, Deal__r.Deal_ID_Title__c = &apos;3304&apos;),299,IF(Deal__r.Deal_ID_Title__c = &apos;1735&apos;, 399, IF(OR(Deal__r.Deal_ID_Title__c = &apos;3368&apos;, Deal__r.Deal_ID_Title__c = &apos;3108&apos;, Deal__r.Deal_ID_Title__c = &apos;3133&apos;), 199, 499)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>POM credit Deal Amount For Formula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>