force-app/main/default/objects/order_line_item__c/fields/ordexp_POM_Type__c.field-meta.xml
<CustomField>
    <fullName>ordexp_POM_Type__c</fullName>
    <label>POM Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ANY</fullName>
            </value>
            <value>
                <fullName>SAME</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>