force-app/main/default/objects/order_line_item__c/fields/ordexp_ReEvaluate_CS_attribution__c.field-meta.xml
<CustomField>
    <fullName>ordexp_ReEvaluate_CS_attribution__c</fullName>
    <defaultValue>true</defaultValue>
    <label>ReEvaluate CS attribution</label>
    <type>Checkbox</type>
</CustomField>