force-app/main/default/objects/order_line_item__c/fields/ordexp_Send_COVID_Email_Offer__c.field-meta.xml
<CustomField>
    <fullName>ordexp_Send_COVID_Email_Offer__c</fullName>
    <label>Send COVID Email Offer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TADDefer and Open Credit</fullName>
            </value>
            <value>
                <fullName>Dynamic TADDefer and Open Credit</fullName>
            </value>
            <value>
                <fullName>TADDefer only</fullName>
            </value>
            <value>
                <fullName>Open Credit with Fee - only</fullName>
            </value>
            <value>
                <fullName>Open Credit no Fee - only</fullName>
            </value>
            <value>
                <fullName>Custom Offer</fullName>
            </value>
            <value>
                <fullName>China Open Credit with Fee</fullName>
            </value>
            <value>
                <fullName>Japan Defer with Fee</fullName>
            </value>
            <value>
                <fullName>Reoffer TADDefer and Open Credit</fullName>
            </value>
            <value>
                <fullName>MyDeals Offer</fullName>
            </value>
            <value>
                <fullName>Sent - TADDefer and Open Credit</fullName>
            </value>
            <value>
                <fullName>Sent - Dynamic TADDefer and Open Credit</fullName>
            </value>
            <value>
                <fullName>Sent - TADDefer only</fullName>
            </value>
            <value>
                <fullName>Sent - Open Credit with Fee</fullName>
            </value>
            <value>
                <fullName>Sent - Open Credit no Fee</fullName>
            </value>
            <value>
                <fullName>Sent - China Open Credit with Fee</fullName>
            </value>
            <value>
                <fullName>Sent - Custom Offer</fullName>
            </value>
            <value>
                <fullName>Sent - Japan Defer with Fee</fullName>
            </value>
            <value>
                <fullName>Sent - Reoffer TADDefer and Open Credit</fullName>
            </value>
            <value>
                <fullName>Sent - MyDeals Offer</fullName>
            </value>
            <value>
                <fullName>Excl Credit/Open Credit</fullName>
            </value>
            <value>
                <fullName>Sent - Excl Credit/Open Credit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>