force-app/main/default/objects/order_line_item__c/fields/ordexp_solo_surcharge__c.field-meta.xml
<CustomField>
    <fullName>ordexp_solo_surcharge__c</fullName>
    <label>Solo Surcharge</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>