force-app/main/default/objects/order_line_item__c/fields/ordexp_suboption_amount__c.field-meta.xml
<CustomField>
    <fullName>ordexp_suboption_amount__c</fullName>
    <formula>IF(ordexp_orderRT__c=&apos;TAD&apos; || ordexp_orderRT__c=&apos;TC&apos;,  General_Pricing__r.Price_AUD__c * VALUE( TEXT(Quantity__c) ),  IF(ordexp_orderRT__c=&apos;TNZ&apos; || ordexp_orderRT__c=&apos;WT&apos;,  General_Pricing__r.Price_NZD__c* VALUE(TEXT(Quantity__c)) , 0) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Suboption Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>