force-app/main/default/objects/order_line_item__c/fields/ordexp_suboption_amount_per_pax__c.field-meta.xml
<CustomField>
    <fullName>ordexp_suboption_amount_per_pax__c</fullName>
    <label>Suboption Amount Per Pax</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>