force-app/main/default/objects/order_line_item__c/fields/ordexp_TAD_Order__c.field-meta.xml
<CustomField>
    <fullName>ordexp_TAD_Order__c</fullName>
    <label>Order</label>
    <referenceTo>TAD_Order__c</referenceTo>
    <relationshipLabel>Order Line Items</relationshipLabel>
    <relationshipName>Order_Line_Items_orders</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>