force-app/main/default/objects/order_line_item__c/fields/ordexp_TAD_Recordype__c.field-meta.xml
<CustomField>
    <fullName>ordexp_TAD_Recordype__c</fullName>
    <formula>ordexp_TAD_Order__r.RecordType.DeveloperName</formula>
    <label>TAD Recordype</label>
    <type>Text</type>
</CustomField>