force-app/main/default/objects/order_line_item__c/fields/ordexp_TADCredit_Amount__c.field-meta.xml
<CustomField>
    <fullName>ordexp_TADCredit_Amount__c</fullName>
    <formula>Open_Credit_Supplier_Fee__c *  PAX_Qty__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TADCredit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>