force-app/main/default/objects/order_line_item__c/fields/ordexp_TADDefer_Amount__c.field-meta.xml
<CustomField>
    <fullName>ordexp_TADDefer_Amount__c</fullName>
    <formula>( ordexp_Total_OLI_Net_Amount__c ) - ( PAX_Qty__c *  ordexp_Defer_Fee__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TADDefer Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>