force-app/main/default/objects/order_line_item__c/fields/ordexp_total_customisations_amount__c.field-meta.xml
<CustomField>
    <fullName>ordexp_total_customisations_amount__c</fullName>
    <label>Total Customisations Amount</label>
    <summarizedField>Order_Customisations_POE__c.ff_Total_Price__c</summarizedField>
    <summaryFilterItems>
        <field>Order_Customisations_POE__c.Status__c</field>
        <operation>equals</operation>
        <value>Accepted and Paid, Customer Approved, Cancelled</value>
    </summaryFilterItems>
    <summaryForeignKey>Order_Customisations_POE__c.Order_Line_Item__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>