force-app/main/default/objects/order_line_item__c/fields/ordexp_total_insurance_amount__c.field-meta.xml
<CustomField>
    <fullName>ordexp_total_insurance_amount__c</fullName>
    <label>Total Insurance Amount</label>
    <summarizedField>Visa_Insurance_POE__c.Insurance_Sale_Price__c</summarizedField>
    <summaryForeignKey>Visa_Insurance_POE__c.Order_Line_Item__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>