force-app/main/default/objects/order_line_item__c/fields/ordexp_Total_OLI_Net_Amount__c.field-meta.xml
<CustomField>
    <fullName>ordexp_Total_OLI_Net_Amount__c</fullName>
    <formula>orderxp_addons_amount__c + ordexp_suboption_amount__c + ordexp_total_customisations_amount__c +
ordexp_city_surcharge_amount__c +ordexp_total_insurance_amount__c + ordexp_total_visa_amount__c + Total_surcharge__c+HSS_Amount__c -  Total_OLI_Commission__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total OLI Net Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>