force-app/main/default/objects/order_line_item__c/fields/ordexp_wholesale_commissions__c.field-meta.xml
<CustomField>
    <fullName>ordexp_wholesale_commissions__c</fullName>
    <label>Commission Amount AddOns</label>
    <summarizedField>AddOn__c.ordexp_commission__c</summarizedField>
    <summaryFilterItems>
        <field>AddOn__c.AddOn_Status__c</field>
        <operation>notEqual</operation>
        <value>Cancelled</value>
    </summaryFilterItems>
    <summaryForeignKey>AddOn__c.Order_Line_Item__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>