force-app/main/default/objects/order_line_item__c/fields/ordexpEmail_purchaser__c.field-meta.xml
<CustomField>
    <fullName>ordexpEmail_purchaser__c</fullName>
    <formula>ordexp_TAD_Order__r.ordexp_email_purchaser__c</formula>
    <label>Email(purchaser)</label>
    <type>Text</type>
</CustomField>