force-app/main/default/objects/order_line_item__c/fields/ordexpStop_Cancellation_Insurance_Email__c.field-meta.xml
<CustomField>
    <fullName>ordexpStop_Cancellation_Insurance_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stop Cancellation Insurance Email</label>
    <type>Checkbox</type>
</CustomField>