force-app/main/default/objects/order_line_item__c/fields/ordexpTAD_Order_AccountName__c.field-meta.xml
<CustomField>
    <fullName>ordexpTAD_Order_AccountName__c</fullName>
    <formula>ordexp_TAD_Order__r.Account_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TAD Order AccountName</label>
    <type>Text</type>
</CustomField>