force-app/main/default/objects/order_line_item__c/fields/ordexpTAD_Order_Email_Purchaser__c.field-meta.xml
<CustomField>
    <fullName>ordexpTAD_Order_Email_Purchaser__c</fullName>
    <label>TAD Order Email(Purchaser)</label>
    <type>Email</type>
</CustomField>