force-app/main/default/objects/order_line_item__c/fields/Pax_Nicknames__c.field-meta.xml
<CustomField>
    <fullName>Pax_Nicknames__c</fullName>
    <label>Pax Nicknames</label>
    <length>255</length>
    <type>Text</type>
</CustomField>