force-app/main/default/objects/order_line_item__c/fields/PAX_Qty__c.field-meta.xml
<CustomField>
    <fullName>PAX_Qty__c</fullName>
    <formula>VALUE(Text( PAX_Quantity__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PAX Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>