force-app/main/default/objects/order_line_item__c/fields/Pending_Customisations__c.field-meta.xml
<CustomField>
    <fullName>Pending_Customisations__c</fullName>
    <label>Pending Customisations</label>
    <summaryFilterItems>
        <field>Order_Customisations_POE__c.Status__c</field>
        <operation>equals</operation>
        <value>Quote Requested, Customer Approved</value>
    </summaryFilterItems>
    <summaryForeignKey>Order_Customisations_POE__c.Order_Line_Item__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>