force-app/main/default/objects/order_line_item__c/fields/Process_CDTL__c.field-meta.xml
<CustomField>
    <fullName>Process_CDTL__c</fullName>
    <formula>Withheld_Amount__c &lt;&gt;0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Process CDTL</label>
    <type>Checkbox</type>
</CustomField>