force-app/main/default/objects/order_line_item__c/fields/Process_DTL__c.field-meta.xml
<CustomField>
    <fullName>Process_DTL__c</fullName>
    <formula>Withheld_Amount__c  = 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Process DTL</label>
    <type>Checkbox</type>
</CustomField>